# root-me-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  database.py  embeds.py  model.py  pyproject.toml  rootmebot.py
.github/workflows/: docker-publish.yml
