[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "Custom-made Root-Me bot"
license = "MIT"
name = "root-me-bot"
version = "0.1.0"

[tool.poetry.dependencies]
discord = "^1.7.3"
"discord.py-stubs" = "^1.7.3"
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
yapf = "^0.31.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
